--- a/node-app/src/views/pages/index.ejs
+++ b/node-app/src/views/pages/index.ejs
@@ -34,19 +34,17 @@
 
 
 <!-- SECTION - MAIN CONTAINER -->
-<div class="section first">
-    <div class="container">
-        <div class="row">
-            <!-- EVENTS -->
-            <div class="col-md-12 events-list">
-                <% include ./index_partial_events.ejs %>
-            </div>
-
-            <!-- WIDGETS -->
-            <!-- <div class="col-md-4"> -->
-                <%# include ./index_partial_side.ejs %>
-            <!-- </div> -->
+<div class="main-container">
+    <div class="row">
+        <!-- EVENTS -->
+        <div class="col-md-12">
+            <% include ./index_partial_events.ejs %>
         </div>
+
+        <!-- WIDGETS -->
+        <!-- <div class="col-md-4"> -->
+            <%# include ./index_partial_side.ejs %>
+        <!-- </div> -->
     </div>
 </div>
 <!-- /SECTION -->
