--- a/node-app/src/views/partials/footer.ejs
+++ b/node-app/src/views/partials/footer.ejs
@@ -123,12 +123,12 @@
     <!-- row -->
     <div class="footer-bottom row">
         <div class="col-md-6 col-md-push-6">
-            <ul class="footer-nav">
-                <li><a href="/">Início</a></li>
+            <!-- <ul class="footer-nav"> -->
+                <!-- <li><a href="/">Início</a></li> -->
                 <!-- <li><a href="#" onclick="return false;">Serviços</a></li>
                 <li><a href="#" onclick="return false;">Promoções</a></li>
                 <li><a href="#" onclick="return false;">Blog</a></li> -->
-            </ul>
+            <!-- </ul> -->
         </div>
         <div class="col-md-6 col-md-pull-6">
             <div class="footer-copyright">
