--- a/node-app/src/views/pages/index_partial_events.ejs
+++ b/node-app/src/views/pages/index_partial_events.ejs
@@ -1,183 +1,41 @@
-<!-- row - TODAY -->
-<% if (events.today.length > 0) { %>
-    <div class="row mb-5">
-        <div class="col-md-12">
-            <div class="section-title">
-                <h2 class="title">HOJE</h2>
-            </div>
-        </div>
-
-        <% events.today.forEach(function(event, index) { %>
-            <div class=".col-12 .col-sm-6 .col-md-4 .col-lg-3 .col-xl-3">
-                <div class="post">
-                    <a class="post-img" href="#" onclick="return false;"><img src="<%= event.images[0] %>" alt=""></a>
-                    <div class="post-body">
-                        <div class="post-category">
-                            <a href="#" onclick="return false;"><%= event.org_name %></a>
-                        </div>
-                        <h3 class="post-title"><a href="#" onclick="return false;"><%= event.title %></a></h3>
-                        <ul class="post-meta">
-                            <li><a href="#" onclick="return false;"><%= event.org_city %></a></li>
-                            <li><%= moment(event.start).format("ddd") %></li>
-                            <li><%= moment(event.start).format("DD/MM") %></li>
-                        </ul>
-                    </div>
+<!-- events[0] = TODAY -->
+<% for (var day=0; day<15; day++) { %>
+    <% if (events[day] && events[day].length > 0) { %>
+        <div class="row mt-2">
+            <div class="col-md-12">
+                <div class="event-row-title">
+                    <h2>
+                        <% if (day === 0) { %>
+                            HOJE | 
+                        <% } else if (day === 1) { %>
+                            AMANHÃ | 
+                        <% } %>
+                        <%= moment(events[day][0]['start']).format("DD/MM") %>
+                        (<%= moment(events[day][0]['start']).format("dddd") %>)
+                    </h2>
                 </div>
             </div>
-
-            <% if ((index + 1) % 2 === 0) { %>
-                <div class="clearfix visible-md visible-lg"></div>
-            <% } %>
-        <% }) %>
-    </div>
-<% } %><!-- /row -->
-
-
-
-<!-- row - TOMORROW -->
-<% if (events.tomorrow.length > 0) { %>
-    <div class="row mb-5">
-        <div class="col-md-12">
-            <div class="section-title">
-                <h2 class="title">AMANHÃ</h2>
-            </div>
         </div>
 
-        <% events.tomorrow.forEach(function(event, index) { %>
-            <div class=".col-12 .col-sm-6 .col-md-4 .col-lg-3 .col-xl-3">
-                <div class="post">
-                    <a class="post-img" href="#" onclick="return false;"><img src="<%= event.images[0] %>" alt=""></a>
-                    <div class="post-body">
-                        <div class="post-category">
-                            <a href="#" onclick="return false;"><%= event.org_name %></a>
-                        </div>
-                        <h3 class="post-title"><a href="#" onclick="return false;"><%= event.title %></a></h3>
-                        <ul class="post-meta">
-                            <li><a href="#" onclick="return false;"><%= event.org_city %></a></li>
-                            <li><%= moment(event.start).format("ddd") %></li>
-                            <li><%= moment(event.start).format("DD/MM") %></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <% if ((index + 1) % 2 === 0) { %>
-                <div class="clearfix visible-md visible-lg"></div>
-            <% } %>
-        <% }) %>
-    </div>
-<% } %><!-- /row -->    
-
-
-
-<!-- row - NEXT 7 DAYS -->
-<% if (events.sevenDays.length > 0) { %>
-    <div class="row mb-5">
-        <div class="col-md-12">
-            <div class="section-title">
-                <h2 class="title">próximos 7 dias</h2>
-            </div>
-        </div>
-
-        <% events.sevenDays.forEach(function(event, index) { %>
-            <div class=".col-12 .col-sm-6 .col-md-4 .col-lg-3 .col-xl-3">
-                <div class="post">
-                    <a class="post-img" href="#" onclick="return false;"><img src="<%= event.images[0] %>" alt=""></a>
-                    <div class="post-body">
-                        <div class="post-category">
-                            <a href="#" onclick="return false;"><%= event.org_name %></a>
-                        </div>
-                        <h3 class="post-title"><a href="#" onclick="return false;"><%= event.title %></a></h3>
-                        <ul class="post-meta">
-                            <li><a href="#" onclick="return false;"><%= event.org_city %></a></li>
-                            <li><%= moment(event.start).format("ddd") %></li>
-                            <li><%= moment(event.start).format("DD/MM") %></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <% if ((index + 1) % 2 === 0) { %>
-                <div class="clearfix visible-md visible-lg"></div>
-            <% } %>
-        <% }) %>
-    </div>
-<% } %><!-- /row -->    
-
-
-
-<!-- row - NEXT 15 DAYS -->
-<% if (events.fifteenDays.length > 0) { %>
-    <div class="row mb-5">
-        <div class="col-md-12">
-            <div class="section-title">
-                <h2 class="title">próximos 15 dias</h2>
-            </div>
-        </div>
-
-        <% events.fifteenDays.forEach(function(event, index) { %>
-            <div class="col-md-4">
-                <div class="post post-sm">
-                    <a class="post-img" href="#" onclick="return false;"><img src="<%= event.images[0] %>" alt=""></a>
-                    <div class="post-body">
-                        <div class="date">
-                            <li><%= moment(event.start).format("ddd") %></li>
-                            <li><%= moment(event.start).format("DD/MM") %></li>
-                        </div>postpost
-                        <div class="info">
-                            <div class="post-category">
+        <div class="row mb-3 event-row-list">
+            <% events[day].forEach(function(event, index) { %>
+                <div class=".col-12 .col-sm-6 .col-md-4 .col-lg-3 .col-xl-3 mb-3">
+                    <div class="event ml-2 mr-2">
+                        <a class="event-img" href="#" onclick="return false;"><img src="<%= event.images[0] %>" alt=""></a>
+                        <div class="event-body">
+                            <div class="event-category">
                                 <a href="#" onclick="return false;"><%= event.org_name %></a>
                             </div>
-                            <h3 class="post-title title-sm"><a href="#" onclick="return false;"><%= event.title %></a></h3>
-                            <ul class="post-meta">
+                            <h3 class="event-title"><a href="#" onclick="return false;"><%= event.title %></a></h3>
+                            <ul class="event-meta">
                                 <li><a href="#" onclick="return false;"><%= event.org_city %></a></li>
-                                <!-- <li><%= moment(event.start).format("ddd") %></li>
-                                <li><%= moment(event.start).format("DD/MM") %></li> -->
+                                <li><%= moment(event.start).format("ddd") %></li>
+                                <li><%= moment(event.start).format("DD/MM") %></li>
                             </ul>
                         </div>
                     </div>
                 </div>
-            </div>
-
-            <% if ((index + 1) % 3 === 0) { %>
-                <div class="clearfix visible-md visible-lg"></div>
-            <% } %>
-        <% }) %>
-    </div>
-<% } %><!-- /row -->    
-
-
-
-<!-- row - NEXT 30 DAYS -->
-<% if (events.thirtyDays.length > 0) { %>
-    <div class="row mb-5">
-        <div class="col-md-12">
-            <div class="section-title">
-                <h2 class="title">próximos 30 dias</h2>
-            </div>
+            <% }) %>
         </div>
-
-        <% events.thirtyDays.forEach(function(event, index) { %>
-            <div class="col-md-4">
-                <div class="post post-sm">
-                    <a class="post-img" href="#" onclick="return false;"><img src="<%= event.images[0] %>" alt=""></a>
-                    <div class="post-body">
-                        <div class="post-category">
-                            <a href="#" onclick="return false;"><%= event.org_name %></a>
-                        </div>
-                        <h3 class="post-title title-sm"><a href="#" onclick="return false;"><%= event.title %></a></h3>
-                        <ul class="post-meta">
-                            <li><a href="#" onclick="return false;"><%= event.org_city %></a></li>
-                            <li><%= moment(event.start).format("ddd") %></li>
-                            <li><%= moment(event.start).format("DD/MM") %></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <% if ((index + 1) % 3 === 0) { %>
-                <div class="clearfix visible-md visible-lg"></div>
-            <% } %>
-        <% }) %>
-    </div>
-<% } %><!-- /row -->
+    <% } %>
+<% } %>
