--- a/node-app/src/views/partials/event.ejs
+++ b/node-app/src/views/partials/event.ejs
@@ -1,7 +1,7 @@
 <div class="event event-thumb">
     <a class="event-img" href="#" onclick="return false;"><img src="<%= events.featured[index].images[0] %>" alt=""></a>
     <div class="event-body">
-        <div class="event-category featured">
+        <div class="event-org featured">
             <a href="#" onclick="return false;"><%= events.featured[index].org_name %></a>
         </div>
         <h3 class="event-title title-lg"><a href="#" onclick="return false;"><%= events.featured[index].title %></a></h3>
