--- a/node-app/src/views/pages/index_partial_events.ejs
+++ b/node-app/src/views/pages/index_partial_events.ejs
@@ -23,7 +23,7 @@
                     <div class="event ml-2 mr-2">
                         <a class="event-img" href="#" onclick="return false;"><img src="<%= event.images[0] %>" alt=""></a>
                         <div class="event-body">
-                            <div class="event-category">
+                            <div class="event-org">
                                 <a href="#" onclick="return false;"><%= event.org_name %></a>
                             </div>
                             <h3 class="event-title"><a href="#" onclick="return false;"><%= event.title %></a></h3>
