--- a/node-app/src/views/partials/footer.ejs
+++ b/node-app/src/views/partials/footer.ejs
@@ -132,7 +132,7 @@
         </div>
         <div class="col-md-6 col-md-pull-6">
             <div class="footer-copyright">
-                Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos os direitos reservados
+                Copyright &copy; <%= moment().format('YYYY') %> Todos os direitos reservados
             </div>
         </div>
     </div>
