--- a/node-app/public/css/style.css
+++ b/node-app/public/css/style.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 16px;
   color: #505050;
   font-weight: 400;
@@ -71,7 +71,7 @@ ol.list-style {
 	main-container
 \*----------------------------*/
 .main-container {
-  margin: 100px 80px 40px;
+  margin: 80px 80px 40px;
 }
 
 
@@ -134,7 +134,7 @@ textarea.input {
 
 @media only screen and (max-width: 719px) {
   .main-container {
-    margin: 100px 40px 20px;
+    margin: 80px 40px 20px;
   }
 }
 
@@ -560,20 +560,23 @@ nav {
 
 /*=========================================================
 
-><<<<<<<<><<         ><<><<<<<<<<><<<     ><< ><<<<<<<<<<
-><<       ><<       ><< ><<      >< ><<   ><<     ><<    
-><<        ><<     ><<  ><<      ><< ><<  ><<     ><<    
-><<<<<<     ><<   ><<   ><<<<<<  ><<  ><< ><<     ><<    
-><<          ><< ><<    ><<      ><<   >< ><<     ><<    
-><<           ><<<<     ><<      ><<    >< <<     ><<    
-><<<<<<<<      ><<      ><<<<<<<<><<      ><<     ><<    
+><<<<<<<< ><         >< ><<<<<<<< ><<<     ><< ><<<<<<<<<<
+><<       ><<       ><< ><<       >< ><<   ><<     ><<    
+><<        ><<     ><<  ><<       ><< ><<  ><<     ><<    
+><<<<<<     ><<   ><<   ><<<<<<   ><<  ><< ><<     ><<    
+><<          ><< ><<    ><<       ><<   >< ><<     ><<    
+><<           ><<<<     ><<       ><<    >< <<     ><<    
+><<<<<<<<      ><<      ><<<<<<<< ><<      ><<     ><<    
                                                          
 ===========================================================*/
 
+.event-row > div.col-md-12 {
+  padding: 0;
+}
 
 .event-row-title {
   position: relative;
-  margin-bottom: 20px;
+  margin-bottom: 12px;
   margin-left: -15px;
   margin-right: -15px;
 }
@@ -583,13 +586,13 @@ nav {
   padding: 0 12px;
   position: relative;
   display: inline-block;
-  font-size: 20px;
+  font-size: 18px;
   margin-top: 0px;
   margin-bottom: 0px;
   z-index: 20;
-  font-family: Montserrat;
-  font-weight: 500;
-  color:rgba(0, 0, 0, 0.5);
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  color:rgba(0, 60, 0, 0.5);
 }
 
 .event-row-title:after {
@@ -606,31 +609,30 @@ nav {
 
 .event {
   width: 240px;
-  height: 320px; /* 300 */
+  height: 280px; /* 320 */
   background-color: #fff;
   box-shadow: 0 1px 1px 1px lightgrey;
   cursor: pointer;
   border-radius: 4px;
 }
 .event:hover {
-  /* TODO: stop moving text */
   border: 1px solid rgba(0, 0, 0, 0.2);
   background-color: #f3f3f3;
 }
 
 .event:hover .event-img {
-  height: 229px;
+  height: 207px;
 }
 
 .event:hover .event-body {
-  height: 89px;
-  padding: 8px 11px;
+  height: 71px;
+  padding: 4px 11px;
 }
 
 
 .event .event-img {
   display: block;
-  height: 230px;
+  height: 208px;
   overflow: hidden;
   border-top-left-radius: inherit;
   border-top-right-radius: inherit;
@@ -646,18 +648,15 @@ nav {
 
 .event .event-body {
   position: relative;
-  padding: 8px 12px;
+  padding: 4px 12px;
   background: inherit;
   z-index: 10;
-  height: 90px;
+  height: 72px;
   border-bottom-left-radius: inherit;
   border-bottom-right-radius: inherit;
 }
 
 
-.event .event-body .event-org {
-  margin-bottom: 4px;
-}
 .event .event-body .event-org a {
   color: #6c9d61;
   font-weight: 900;
@@ -678,10 +677,10 @@ nav {
 
 
 .event .event-body .event-title {
-  font-size: 14px;
+  font-size: 13px;
   white-space: nowrap;
   overflow: hidden;
-  margin-bottom: 4px;
+  margin-bottom: 0;
   font-weight: 600;
 }
 .event .event-body .event-title a {
@@ -690,27 +689,26 @@ nav {
 
 
 .event .event-body .event-meta {
-  margin-bottom: 4px;
+  margin-bottom: 0;
 }
 .event .event-body .event-meta li {
   display: inline-block;
   color: #97989b;
-  font-size: 12px;
+  font-size: 10px;
   text-transform: uppercase;
 }
 .event .event-body .event-meta li a {
   color: #97989b;
-  font-weight: 700;
+  font-weight: 400;
 }
 .event .event-body .event-meta li a:hover,
 .event .event-body .event-meta li a:focus {
   color: #6c9d61;
 }
 .event .event-body .event-meta li:after {
-  content: '•';
+  content: '|';
   display: inline-block;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 4px;
 }
 .event .event-body .event-meta li:last-child:after {
   display: none;
@@ -723,7 +721,7 @@ nav {
   }
 
   .event-row-title h2 {
-    font-size: 18px;
+    font-size: 16px;
   }
 
   .event-row-title:after {
