--- a/node-app/src/views/partials/head.ejs
+++ b/node-app/src/views/partials/head.ejs
@@ -7,8 +7,7 @@
 <title>SulBAGuia</title>
 
 <!-- Google font -->
-<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CMuli:400,700" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 <!-- Bootstrap -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -20,6 +19,15 @@
 
 <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
+
+<meta property="og:site_name" content="Sul BA Guia">
+<meta property="og:url" content="https://sulbaguia.com.br">
+<meta property="og:title" content="Sul BA Guia" />
+<meta property="og:description" content="Guia de eventos da região sul da Bahia" />
+<meta property="og:image" itemprop="image" content="https://sulbaguia.com.br/img/chinelinho-240.png">
+<meta property="og:image:width" content="240" />
+<meta property="og:image:height" content="240" />
+<meta property="og:type" content="website" />
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
