auto generate codes | remove console.logs

--- a/src/views/pages/index_partial_events.ejs
+++ b/src/views/pages/index_partial_events.ejs
@@ -25,11 +25,11 @@
                         <a class="event-img" href="#" onclick="return false;"><img src="<%= event.images[0] %>" alt=""></a>
                         <div class="event-body">
                             <div class="event-org">
-                                <a href="#" onclick="return false;"><%= event.orgName %></a>
+                                <a href="#" onclick="return false;"><%= event.org %></a>
                             </div>
                             <h3 class="event-title"><a href="#" onclick="return false;"><%= event.title %></a></h3>
                             <ul class="event-meta">
-                                <li><a href="#" onclick="return false;"><%= event.cityName %></a></li>
+                                <li><a href="#" onclick="return false;"><%= event.city %></a></li>
                                 <li><%= moment(event.start).format("DD/MM") %></li>
                                 <li><%= moment(event.start).format("dddd").replace('-feira', '') %></li>
                             </ul>
