--- a/public/css/style.css
+++ b/public/css/style.css
@@ -615,6 +615,7 @@ nav {
   cursor: pointer;
   border-radius: 4px;
 }
+
 .event:hover {
   border: 1px solid rgba(0, 0, 0, 0.2);
   background-color: #f3f3f3;
@@ -629,6 +630,11 @@ nav {
   padding: 4px 11px;
 }
 
+.event a.anchor-wrapper {
+  position: absolute;
+  height: 280px;
+  width: 240px;
+}
 
 .event .event-img {
   display: block;
