--- a/src/views/pages/index_partial_events.ejs
+++ b/src/views/pages/index_partial_events.ejs
@@ -19,21 +19,23 @@
         </div>
 
         <div class="row mb-3 event-row-list">
-            <% events[day].forEach(function(event, index) { %>
+            <% events[day].forEach(function(ev, index) { %>
                 <div class=".col-12 .col-sm-6 .col-md-4 .col-lg-3 .col-xl-3 mb-3">
                     <div class="event ml-2 mr-2">
-                        <a class="event-img" href="#" onclick="return false;"><img src="<%= event.images[0] %>" alt=""></a>
-                        <div class="event-body">
-                            <div class="event-org">
-                                <a href="#" onclick="return false;"><%= event.org %></a>
+                        <a class="anchor-wrapper" href="/evento/<%=ev.code%>">
+                            <a class="event-img" href="#" onclick="return false;"><img src="<%= ev.images[0] %>" alt=""></a>
+                            <div class="event-body">
+                                <div class="event-org">
+                                    <a href="#" onclick="return false;"><%= ev.org %></a>
+                                </div>
+                                <h3 class="event-title"><a href="#" onclick="return false;"><%= ev.title %></a></h3>
+                                <ul class="event-meta">
+                                    <li><a href="#" onclick="return false;"><%= ev.city %></a></li>
+                                    <li><%= moment(ev.start).format("DD/MM") %></li>
+                                    <li><%= moment(ev.start).format("dddd").replace('-feira', '') %></li>
+                                </ul>
                             </div>
-                            <h3 class="event-title"><a href="#" onclick="return false;"><%= event.title %></a></h3>
-                            <ul class="event-meta">
-                                <li><a href="#" onclick="return false;"><%= event.city %></a></li>
-                                <li><%= moment(event.start).format("DD/MM") %></li>
-                                <li><%= moment(event.start).format("dddd").replace('-feira', '') %></li>
-                            </ul>
-                        </div>
+                        </a>
                     </div>
                 </div>
             <% }) %>
