--- a/src/views/partials/aside.ejs
+++ b/src/views/partials/aside.ejs
@@ -1,31 +1,31 @@
 <!-- cities widget -->
-<!-- <div class="aside-widget">
-    <div class="section-title">
-        <h2 class="title">Cidades</h2>
+<div class="aside-widget">
+    <div class="title">
+        <h2>Cidades</h2>
     </div>
-    <div class="category-widget">
+    <div class="cities-widget">
         <ul>
             <li><a href="#"><i class="far fa-check-square"></i> Arraial D'Ajuda <span>451</span></a></li>
             <li><a href="#"><i class="far fa-check-square"></i> Porto Seguro <span>230</span></a></li>
             <li><a href="#"><i class="far fa-square"></i> Trancoso <span>38</span></a></li>
-            <li><a href="#"><i class="far fa-check-square"></i> Caraíva <span>24</span></a></li>
+            <!-- <li><a href="#"><i class="far fa-check-square"></i> Caraíva <span>24</span></a></li>
             <li><a href="#"><i class="far fa-square"></i> Santa Cruz Cabrália <span>4</span></a></li>
             <li><a href="#"><i class="far fa-check-square"></i> Prado / Cumuruxatiba / Ponta do Corumbau <span>451</span></a></li>
             <li><a href="#"><i class="far fa-check-square"></i>Belmonte / Mogiquiçaba<span>451</span></a></li>
-            <li><a href="#"><i class="far fa-check-square"></i>Santo André / Santo Antônio<span>451</span></a></li>
+            <li><a href="#"><i class="far fa-check-square"></i>Santo André / Santo Antônio<span>451</span></a></li> -->
         </ul>
     </div>
-    
+
     <button class="primary-button d-block mx-auto mt-3">Filtrar</button>
-</div> -->
+</div>
 <!-- /cities widget -->
     
 <!-- ad widget-->
-<!-- <div class="aside-widget text-center">
+<div class="aside-widget text-center">
     <a href="#" style="display: inline-block;margin: auto;">
         <img class="img-responsive" src="./img/ad-3.jpg" alt="">
     </a>
-</div> -->
+</div>
 <!-- /ad widget -->
 
 <!-- social widget -->
@@ -58,8 +58,9 @@
 </div> -->
 <!-- /social widget -->
 
+
 <!-- newsletter widget -->
-<!-- <div class="aside-widget">
+<div class="aside-widget">
     <div class="section-title">
         <h2 class="title">não quero ficar de fora</h2>
     </div>
@@ -70,8 +71,9 @@
             <button class="primary-button">Inscrever</button>
         </form>
     </div>
-</div> -->
+</div>
 <!-- /newsletter widget -->
+
 
 <!-- galery widget -->
 <!-- <div class="aside-widget">
@@ -91,13 +93,15 @@
 </div> -->
 <!-- /galery widget -->
 
+
 <!-- Ad widget -->
-<!-- <div class="aside-widget text-center">
+<div class="aside-widget text-center">
     <a href="#" style="display: inline-block;margin: auto;">
         <img class="img-responsive" src="./img/ad-1.jpg" alt="">
     </a>
-</div> -->
+</div>
 <!-- /Ad widget -->
+
 
 <!-- post widget -->
 <!-- <div class="aside-widget">
