--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
 <!-- Custom stlylesheet -->
-<link type="text/css" rel="stylesheet" href="css/style.css" />
+<link type="text/css" rel="stylesheet" href="/css/global.css" />
 
 <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
 
