clean, org, cities filtering

--- a/public/css/aside.css
+++ b/public/css/aside.css
@@ -27,23 +27,33 @@
 
 
 /*----------------------------*\
-	category widget
+	cities widget
 \*----------------------------*/
 
 .cities-widget ul li {
-  padding: 15px 0px;
+  padding: 8px 0px 8px 16px;
   border-bottom: 1px solid #e8eaed;
+  border-radius: 4px;
+}
+
+.cities-widget ul li.active {
+  background-color: rgba(0,0,0,0.05);
+}
+
+.cities-widget ul li.active a {
+  color: rgba(0, 60, 0, 0.5);
+  font-weight: 700;
 }
 
 .cities-widget ul li a {
   display: block;
   text-transform: uppercase;
-  font-weight: 700;
+  font-weight: 400;
 }
 
 .cities-widget ul li a span {
   float: right;
-  font-size: 14px;
+  font-size: 12px;
   color: #97989b;
   margin-left: 15px;
 }
@@ -52,7 +62,17 @@
   border-color: #323335;
 }
 
+img.t-300-250 {
+  width: 100%;
+}
 
+
+/*----------------------------*\
+	ad widget
+\*----------------------------*/
+.ad-widget img {
+  max-width: 280px;
+}
 
 /*----------------------------*\
 	social widget
