--- a/src/views/pages/events/events.ejs
+++ b/src/views/pages/events/events.ejs
@@ -10,7 +10,7 @@
         <header id="header"><% include ../../partials/header %></header>
 
         <!-- SECTION - DESTAQUE -->
-        <!-- <% if (events.featured && events.featured.length > 0) { %>
+        <!-- <% if (featured && featured.length > 0) { %>
             <% include ./partial_featured.ejs %>
         <% } %> -->
 
