--- a/src/views/pages/events/partial_featured.ejs
+++ b/src/views/pages/events/partial_featured.ejs
@@ -1,6 +1,6 @@
 <div class="section">
     <div class="row justify-content-center">
-        <% for(var i=0; i < events.featured.length; i++) { %>
+        <% for(var i=0; i < featured.length; i++) { %>
             <div class=".col-12 .col-sm-12 .col-md-6 .col-lg-4 .col-xl-3 mx-3">
                 <%- include('../partials/event', {index: i}) %>
             </div>
