--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -69,7 +69,7 @@
     <!-- /Main Nav -->
 
     <!-- Aside Nav -->
-    <div id="nav-aside">
+    <!-- <div id="nav-aside">
         <ul class="nav-aside-menu">
             <li class="has-dropdown"><a>Início</a>
                 <ul class="dropdown">
@@ -79,7 +79,7 @@
                     <li><a href="#" onclick="return false;">Fale consosco</a></li>
                 </ul>
             </li>
-            <!-- <li><a href="#">Eventos</a></li> -->
+            <li><a href="#">Eventos</a></li>
             <li class="has-dropdown"><a>Eventos</a>
                 <ul class="dropdown">
                     <li><a href="#" onclick="return false;">Forró</a></li>
@@ -92,10 +92,9 @@
             <li><a href="#" onclick="return false;">Serviços</a></li>
             <li><a href="#" onclick="return false;">Promoções</a></li>
             <li><a href="#" onclick="return false;">Blog</a></li>
-            <!-- <li><a href="#" onclick="return false;">Advertise</a></li> -->
         </ul>
         <button class="nav-close nav-aside-close"><span></span></button>
-    </div>
+    </div> -->
     <!-- /Aside Nav -->
 </div>
 <!-- /NAV -->
