--- a/src/views/pages/events/event/event.ejs
+++ b/src/views/pages/events/event/event.ejs
@@ -1,4 +1,4 @@
-<!-- views/pages/events.ejs -->
+<!-- views/pages/events/events.ejs -->
 <!DOCTYPE html>
 <html lang="pt">
     <head>
@@ -8,7 +8,6 @@
     <body>
         <header id="header"><% include ../../partials/header %></header>
 
-        <!-- SECTION - MAIN CONTAINER -->
         <div class="main-container">
             <div class="row">
                 <!-- EVENTS -->
@@ -22,25 +21,6 @@
                 <!-- </div> -->
             </div>
         </div>
-        <!-- /SECTION -->
- 
-        <!-- <main>
-        <div class="row">
-            <div class="col-sm-8">    
-                <div class="jumbotron">
-                    <h1>This is great</h1>
-                    <p>Welcome to templating using EJS</p>
-                </div>
-            </div>
-
-            <div class="col-sm-4">        
-                <div class="well">
-                    <h3>Look I'm A Sidebar!</h3>
-                </div>
-            </div>
-
-        </div>
-        </main> -->
 
         <footer id="footer"><% include ../../partials/footer %></footer>
     </body>
