--- a/src/views/partials/aside.ejs
+++ b/src/views/partials/aside.ejs
@@ -5,9 +5,10 @@
     </div>
     <div class="cities-widget">
         <ul>
-            <li><a href="#"><i class="far fa-check-square"></i> Arraial D'Ajuda <span>451</span></a></li>
-            <li><a href="#"><i class="far fa-check-square"></i> Porto Seguro <span>230</span></a></li>
-            <li><a href="#"><i class="far fa-square"></i> Trancoso <span>38</span></a></li>
+            <% cities.forEach(function(city) { %>
+                <li><a href="/eventos/<%= city.code %>"> <%= city.name %></a></li>
+            <% }); %>
+            
             <!-- <li><a href="#"><i class="far fa-check-square"></i> Caraíva <span>24</span></a></li>
             <li><a href="#"><i class="far fa-square"></i> Santa Cruz Cabrália <span>4</span></a></li>
             <li><a href="#"><i class="far fa-check-square"></i> Prado / Cumuruxatiba / Ponta do Corumbau <span>451</span></a></li>
@@ -16,14 +17,14 @@
         </ul>
     </div>
 
-    <button class="primary-button d-block mx-auto mt-3">Filtrar</button>
+    <!-- <button class="primary-button d-block mx-auto mt-3">Filtrar</button> -->
 </div>
 <!-- /cities widget -->
     
 <!-- ad widget-->
-<div class="aside-widget text-center">
-    <a href="#" style="display: inline-block;margin: auto;">
-        <img class="img-responsive" src="./img/ad-3.jpg" alt="">
+<div class="aside-widget text-center ad-widget">
+    <a href="/anunciar" style="display: inline-block;margin: auto;">
+        <img class="img-responsive t-300-250" src="/img/ad/anuncie-aqui-300-250.png" alt="">
     </a>
 </div>
 <!-- /ad widget -->
@@ -60,7 +61,7 @@
 
 
 <!-- newsletter widget -->
-<div class="aside-widget">
+<!-- <div class="aside-widget">
     <div class="section-title">
         <h2 class="title">não quero ficar de fora</h2>
     </div>
@@ -71,7 +72,7 @@
             <button class="primary-button">Inscrever</button>
         </form>
     </div>
-</div>
+</div> -->
 <!-- /newsletter widget -->
 
 
@@ -95,11 +96,11 @@
 
 
 <!-- Ad widget -->
-<div class="aside-widget text-center">
+<!-- <div class="aside-widget text-center">
     <a href="#" style="display: inline-block;margin: auto;">
         <img class="img-responsive" src="./img/ad-1.jpg" alt="">
     </a>
-</div>
+</div> -->
 <!-- /Ad widget -->
 
 
