--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -122,15 +122,16 @@
 
     <!-- row -->
     <div class="footer-bottom row">
-        <div class="col-md-6 col-md-push-6">
+        <!-- <div class="col-md-6 col-md-push-6"> -->
             <!-- <ul class="footer-nav"> -->
                 <!-- <li><a href="/">Início</a></li> -->
                 <!-- <li><a href="#" onclick="return false;">Serviços</a></li>
                 <li><a href="#" onclick="return false;">Promoções</a></li>
                 <li><a href="#" onclick="return false;">Blog</a></li> -->
             <!-- </ul> -->
-        </div>
-        <div class="col-md-6 col-md-pull-6">
+        <!-- </div> -->
+        <!-- col-md-pull-8 -->
+        <div class="col-md-8">
             <div class="footer-copyright">
                 Copyright &copy; <%= moment().format('YYYY') %> Todos os direitos reservados
             </div>
